compiler/e2e/test/snapshot/bootstrap/redifinition/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: assert_string
---
stderr:
error: symbol `First` is already defined in the scope `main`
  ╭─ bootstrap/redifinition/main.pnx:5:14
  │
1 │ public trait First:
  │              ----- symbol `First` is already defined here
  ·
5 │ public trait First:
  │              ^^^^^ redefinition here

error: symbol `Second` is already defined in the scope `main`
   ╭─ bootstrap/redifinition/main.pnx:13:17
   │
 9 │ public trait Second:
   │              ------ symbol `Second` is already defined here
   ·
13 │ public function Second():
   │                 ^^^^^^ redefinition here

error: symbol `first` is already defined in the scope `main::RedefinitionInTrait`
   ╭─ bootstrap/redifinition/main.pnx:19:21
   │
18 │     public function first()
   │                     ----- symbol `first` is already defined here
19 │     public function first()
   │                     ^^^^^ redefinition here

error: symbol `Second` is already defined in the scope `main::RedefinitionInTrait`
   ╭─ bootstrap/redifinition/main.pnx:22:17
   │
21 │     public type Second
   │                 ------ symbol `Second` is already defined here
22 │     public type Second
   │                 ^^^^^^ redefinition here

error: symbol `THIRD` is already defined in the scope `main::RedefinitionInTrait`
   ╭─ bootstrap/redifinition/main.pnx:25:17
   │
24 │     public type THIRD
   │                 ----- symbol `THIRD` is already defined here
25 │     public type THIRD
   │                 ^^^^^ redefinition here



stdout:
